--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            background-color:red;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>shayan lakhani</h1>
+
 </body>
 </html>
