--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{
-            background-color:red;
-            color: white;
-        }
+        h1,h3,h5{background-color:red;color: white;}
+        h2,h4,h6{background-color:blue;color: yellow;}
     </style>
 </head>
 <body>
     <h1>shayan lakhani</h1>
-
+    <h1>shayan lakhani</h1>
+    <h1>shayan lakhani</h1>
+    <h2>shayan lakhani</h2>
+    <h3>shayan lakhani</h3>
+    <h4>shayan lakhani</h4>
+    <h5>shayan lakhani</h5>
+    <h6>shayan lakhani</h6>
 </body>
 </html>
