--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1,h3,h5{background-color:red;color: white;}
-        h2,h4,h6{background-color:blue;color: yellow;}
+        h1,h3,h5{background-color:red;color: white; font-size: 25px; font-family: verdana;}
+        h2,h4,h6{background-color:black;color: rgba(255, 0, 255, 0.7); font-size: 34px; font-family: arial;}
     </style>
 </head>
 <body>
