--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1,h3,h5{background-color:red;color: white; font-size: 25px; font-family: verdana;}
-        h2,h4,h6{background-color:black;color: rgba(255, 0, 255, 0.7); font-size: 34px; font-family: arial;}
+        h1,
+        h3,
+        h5 {
+            background-color: red;
+            color: white;
+            font-size: 25px;
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+        h2,
+        h4,
+        h6 {
+            background-color: black;
+            color: rgba(255, 0, 255, 0.7);
+            font-size: 34px;
+            font-family:Arial, Helvetica, sans-serif;
+        }
     </style>
 </head>
+
 <body>
     <h1>shayan lakhani</h1>
     <h1>shayan lakhani</h1>
@@ -19,4 +36,5 @@
     <h5>shayan lakhani</h5>
     <h6>shayan lakhani</h6>
 </body>
+
 </html>
